--- a/MemeMe/Info.plist
+++ b/MemeMe/Info.plist
@@ -2,10 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Save Image to gallery.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save Image to gallery.</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Select images for yout memes.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Take pictures for your memes.</string>
 	<key>CFBundleDevelopmentRegion</key>
